--- a/tutorial/one.org
+++ b/tutorial/one.org
@@ -1,12 +1,38 @@
-* Tutorial - ONE
+* one.el
 :PROPERTIES:
 :ONE: one-default-home
 :CUSTOM_ID: /
 :END:
 
-Hi, I'm Tony Aldon and I'm glad that you're giving a try to ~one~, a
+Hi, I'm Tony Aldon and I'm glad that you're giving a try to ~one.el~, a
 simple static site generator for Emacs Lisp programmers and org-mode
 users.  I hope its design fits your workflow.
+
+If you've already [[#/blog/install-one-el/][installed one]] the best way to start is to visite the
+[[#/blog/getting-started/][Getting started]] page.
+
+* TODO Install one.el
+:PROPERTIES:
+:ONE: one-default
+:CUSTOM_ID: /blog/install-one-el/
+:END:
+
+~one.el~ depends on ~jack~ and ~htmlize~ packages that are available on
+[[https://melpa.org/][Melpa]].  Once you have them installed you can add ~one.el~ to your
+~load-path~ and require it like this:
+
+#+BEGIN_SRC emacs-lisp
+(add-to-list 'load-path "/path/to/one.el/")
+(require 'one)
+#+END_SRC
+
+If you're using ~straight.el~, to install ~one.el~ you can add this
+sexp to your init file:
+
+#+BEGIN_SRC emacs-lisp
+(straight-use-package
+ '(one :type git :host github :repo "tonyaldon/one.el"))
+#+END_SRC
 
 * Getting started
 :PROPERTIES:
@@ -31,6 +57,8 @@ visiting the file ~one.org~ and you can go through this tutorial.
 
 Let's build the website under the directory ~./public/~ by calling
 ~one-build~ command.  Our project's structure is now:
+
+# FIXME: update the tree when the tutorial is terminated
 
 #+BEGIN_SRC text
 .
@@ -61,14 +89,16 @@ $ cd public
 $ browser-sync start -s -w --files "*"
 #+END_SRC
 
-If the port ~3000~ isn't used we should have our website served at
+Assuming the port ~3000~ isn't used we have our website served at
 ~http://localhost:3000~.
 
 Finally:
 
-1) after this paragraph we write 'Hello world!',
-2) we call ~one-build~ command (or ~one-render-pages~) and
-3) we watch the changes live in our browser.
+1) in our browser we visit the page
+   ~http://localhost:3000/blog/getting-started/~,
+2) after this paragraph we write 'Hello world!',
+3) then we call ~one-build~ command again and
+4) we watch the changes live in our browser.
 
 Cool, right?
 
